coming in from right

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         async function updateMeanVolumes() {
             const data = await fetchMeanVolumes();
             const x = 5 * Array.from({length: data.length}, (_, i) => i).reverse();
-            const y = data.map(value => value);
+            const y = data.map(value => value).reverse();
             console.log(x, y);
             Plotly.newPlot('monitor-chart', [{x, y}]);
         }
